# rust-usb-driver

./: .gitignore  Cargo.toml  README.md  run.sh
assets/: OVMF_VARS.fd
bootloader/: Cargo.toml  README.md
bootloader/src/: main.rs
kernel/: Cargo.toml  README.md
kernel/.cargo/: config.toml
kernel/src/: main.rs  pci.rs  serial.rs  xhci.rs
